# django_learning

./: db.sqlite3  pyproject.toml
first_project/: settings.py
