[tool.poetry]
name = "first-django-project"
version = "0.1.0"
description = ""
authors = ["Aleksei Tishkov <tscenic.ua@gmail.com>"]
readme = "README.md"
packages = [{include = "first_django_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
